# 2024ICDE-Reverse-Regret-Query

Code/: Readme.txt
Code/Exp/: CMakeLists.txt  File_id.diz  Readme.txt  config.txt  main.cpp  qhull-2020-src-8.0.2-tgz.md5sum
Code/Exp/2DSW/: sw.cpp  sw.h
Code/Exp/Baseline/: Baseline.h
Code/Exp/GroundTruth/: Groundtruth.cpp  Groundtruth.h
Code/Exp/HDSP/: HDSP.h
Code/Exp/LPCTA/: lpcta.h
Code/Exp/Others/: lp.h
Code/Exp/UH/: frame.cpp
Code/Exp/data/: car_2.txt
Code/Exp/html/: qh-get.htm
Code/Exp/output/: top.txt
Code/Exp/src/libqhull/: index.htm
Code/Exp/src/libqhull_r/: poly2_r.c  qhull_r-nomerge-exports.def
Code/Exp/structure/: data_struct.h  data_utility.cpp  data_utility.h  define.h  hyperplane.cpp  hyperplane.h  point_set.cpp  rtree.cpp  treeIndex.cpp
Code/Exp1/: CMakeLists.txt  Makefile  Readme.txt  config.txt
Code/Exp1/Baseline/: Baseline.cpp
Code/Exp1/HDSP/: APC.cpp  APC.h  HDSP.cpp
Code/Exp1/LPCTA/: lpcta.cpp
Code/Exp1/Others/: lp.cpp  operation.cpp  operation.h
Code/Exp1/UH/: frame.h
Code/Exp1/html/: qh-code.htm
Code/Exp1/output/: candPoint.txt  ext_pt (王伟程的MacBook Pro 的冲突副本 2022-03-28).txt  hyperplane_data.txt
Code/Exp1/src/libqhull_r/: index.htm  io_r.c  io_r.h  qhull_r-exports.def
Code/Exp1/structure/: ctree.cpp  ctree.h  halfspace_tree.cpp  halfspace_tree.h  hyperplane_set.cpp  hyperplane_set.h  point_set.h  point_t.cpp  point_t.h  rtree.h  treeIndex.h
Code/Exp2/: CMakeLists.txt  Readme.txt  config.txt  main.cpp  result.txt
Code/Exp2/index/: Indep2d400k.txt_dim.idx
Code/Exp2/klevel/: README.txt  k_level_lib.cpp  k_level_lib.h
Code/Exp2/klevel/adapter/: lp_adapter.cpp  lp_adapter.h  qhull_adapter.cpp  qhull_adapter.h  qp_adapter.cpp  qp_adapter.h  rtree_adapter.cpp  rtree_adapter.h
Code/Exp2/klevel/algorithm/: kcell.cpp  kcell.h  level.cpp  level.h  region.cpp  region.h  utils.cpp  utils.h
Code/Exp2/klevel/operator/: kregret.cpp  kregret.h  kspr.cpp  kspr.h  oru.cpp  oru.h  topk.cpp  topk.h  utk.cpp  utk.h
Code/Exp2/lib/lp_lib/: lp_report.c
Code/Exp2/lib/rtree/: header.h  rtree.cpp
Code/UserStudy/: Readme.txt
Code/UserStudy/Back/: server.js
Code/UserStudy/Front/docs/: asset-manifest.json  index.html  precache-manifest.49166d138038da77772d6335524f29e6.js  run.js  run.wasm  service-worker.js  web.js
Code/UserStudy/Front/docs/static/js/: 1.2d1b07b2.chunk.js  main.277d3923.chunk.js  main.277d3923.chunk.js.map
Code/UserStudy/Front/emlib/: libglpk.la
Code/UserStudy/Front/input/: car.txt
Code/UserStudy/Front/output/: ext_pt.txt  hyperplane_data.txt  point.txt
Code/UserStudy/Front/react-app/: package.json
Code/UserStudy/Front/react-app/public/: index.html  run.wasm  web.wasm
Code/UserStudy/Front/react-app/src/: index.js  utils.js
Code/UserStudy/Front/react-app/src/actions/: index.js
Code/UserStudy/Front/react-app/src/components/: App.js  ConvexHull.js  Declaration.js  End.js  Histogram.js  Interaction.js  Introduction.js  Legend.js  PhaseOne.js  PhaseTwo.js  PreferenceSpace.js  Question.js  Result.js  Stats.js  Visuals.js  Welcome.js  three.js
Code/UserStudy/Front/react-app/src/reducers/: index.js
